글자넘어가는문제추가수정
글자넘어가는문제추가수정

--- a/src/pages/choicedetail/choicedetail.html
+++ b/src/pages/choicedetail/choicedetail.html
@@ -239,8 +239,8 @@
               <div>
                 <table>
                   <tr style="width: 100%;">
-                    <td style="width:30px;">
-                      <span *ngIf="b.angel">
+                    <td *ngIf="b.angel" style="width:30px;">
+                      <span >
                         <img style=" height: 28px; width:28px;" class="logo" src="assets/img/angel.png" />
                       </span>
                     </td>
