--- a/src/pages/infomodal/infomodal.html
+++ b/src/pages/infomodal/infomodal.html
@@ -52,7 +52,7 @@ top: 10%;" padding>
                 <ion-toggle style="
                 position: absolute;
                 right: 12%;
-              " slot="end" (ionChange)="myChange2($event)" [(ngModel)]="booleanValue2" ></ion-toggle> <span style="    float: right;
+              " slot="end" (ionChange)="myChange2($event)"  ></ion-toggle> <span style="    float: right;
               position: absolute;
               right: 5%;
               color: white;
