초이스 종료 수정 및 인원수 반영 처리
초이스 종료 수정 및 인원수 반영 처리

--- a/src/pages/choicedetail/choicedetail.html
+++ b/src/pages/choicedetail/choicedetail.html
@@ -58,7 +58,7 @@
               <span>{{a.name}}</span>
               <span>{{a.incharge}}</span>
               <span>{{a.max_people_count}} 인 </span> 
-              <span >{{a.numofpeople}} 인</span>
+              <span >{{numofagasi}} 인.</span>
               <span>{{a.wt}}</span>
               <span>{{a.created_at.split(" ")[1].split(":")[0]}}:{{a.created_at.split(" ")[1].split(":")[1]}}</span> 
               <span>-</span> 
