tc,money 표시되게수정
tc,money 표시되게수정

--- a/src/pages/choicedetail/choicedetail.html
+++ b/src/pages/choicedetail/choicedetail.html
@@ -111,9 +111,9 @@
                       </span>
                     </td>
                     <td>
-                      <!-- <span *ngIf="b.tc!=undefined&&!modifyflag">
-                        <small>{{b.tc}}<small>개</small></small> <br><small>{{b.money}}<small>만원</small></small>
-                      </span> -->
+                      <span *ngIf="a.tc!=undefined&&!modifyflag">
+                        <small>{{a.tc}}<small>개</small></small> <br><small>{{a.money}}<small>만원</small></small>
+                      </span>
                     </td>
                     <td>
                       <!-- <div *ngIf="modifyflag">
